# platform

./: .env.example  .gitignore  .replit  app.py  app_old.py  backtest_options.py  pyproject.toml  replit.md  requirements.txt  sample.txt  seed_sp500_and_history.py  test-alpaca-sam.py  test_alpaca_connection.py  trading_engine.py  trading_platform.db  trading_platform.db-shm  trading_platform.db-wal  trading_platform_pre_migration_20251030_040930.db
.streamlit/: config.toml
api/: main.py
app_pages/: admin.py  ai_assistant.py  dashboard.py  dashboard_old.py  database_admin.py  portfolio.py  settings.py  trading.py  trading_engine_control.py
attached_assets/: Pasted--main-py-FastAPI-scaffold-with-JWT-auth-stubs-and-key-endpoints-import-os-from-datetime-import-da-1761797306007_1761797306008.txt  Pasted--models-py-SQLAlchemy-models-for-algorithmic-trading-app-SQLite-Postgres-compatible-from-date-1761797294125_1761797294126.txt  Pasted-Support-different-broker-APIs-in-separate-modules-start-with-RobinHood-and-alpaca-such-that-if-the-1754150104312_1754150104315.txt  Pasted-Support-different-broker-APIs-in-separate-modules-start-with-RobinHood-and-alpaca-such-that-if-the-1754150142432_1754150142433.txt  Pasted-Table-for-global-environment-variables-perhaps-here-or-elsewhere-set-a-variable-for-paper-trading-o-1754147650850_1754147650851.txt  Pasted-Write-an-algorithmic-trading-app-for-stocks-and-stock-options-with-SQL-relational-database-and-a-w-1754139975861_1754139975862.txt  (+1 more)
database/: database.py  init_database.py  models.py  models_backup.py  models_old_backup.py
(+22 files in other folders)
